# nue

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: mlx.yml  nue.yml
.windsurf/rules/: rules.md
nue/: __init__.py  cli.py  common.py  corpus.py  datasets.py  gpt.py  minigpt.py  rope.py  train.py  utils.py  utils_test.py
nue/cli/: corpus.py  main.py
nue/mlx/: .train.py.swp  __init__.py  model.py  model_test.py  train.py  train_test.py
nue/model/: __init__.py  base.py  torch.py  torch_test.py
nue/train/: .trainer.py.swp  __init__.py  base.py  dataset.py  dataset_test.py  models.py  tokenizer.py  torch.py  trainer.py
